Corrigindo bug nas poesias

--- a/pages/poesia.html
+++ b/pages/poesia.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="shortcut icon" href="../assets/favicons/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="assets/multiverse/css/main.css" />
+    <link rel="stylesheet" href="../assets/multiverse/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/multiverse/css/noscript.css" /></noscript>
     <link rel="stylesheet" href="../assets/css/main.css" />
     <link rel="stylesheet" href="../assets/css/navbar.css" />
