--- a/pages/poesia.html
+++ b/pages/poesia.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="shortcut icon" href="../assets/favicons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/multiverse/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/multiverse/css/noscript.css" /></noscript>
+    <noscript><link rel="stylesheet" href="../assets/multiverse/css/noscript.css" /></noscript>
     <link rel="stylesheet" href="../assets/css/main.css" />
     <link rel="stylesheet" href="../assets/css/navbar.css" />
     <noscript>
@@ -332,25 +332,25 @@
 </section>
 </div>
 <!-- Scripts -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/jquery.scrollex.min.js"></script>
-        <script src="assets/js/jquery.scrolly.min.js"></script>
-        <script src="assets/js/browser.min.js"></script>
-        <script src="assets/js/breakpoints.min.js"></script>
-        <script src="assets/js/util.js"></script>
-        <script src="assets/js/main.js"></script>
-        <script src="assets/js/navbar.js"></script>
+        <script src="../assets/js/jquery.min.js"></script>
+        <script src="../assets/js/jquery.scrollex.min.js"></script>
+        <script src="../assets/js/jquery.scrolly.min.js"></script>
+        <script src="../assets/js/browser.min.js"></script>
+        <script src="../assets/js/breakpoints.min.js"></script>
+        <script src="../assets/js/util.js"></script>
+        <script src="../assets/js/main.js"></script>
+        <script src="../assets/js/navbar.js"></script>
 
         <!-- Note: Only needed for demo purposes. Delete for production sites. -->
-        <script src="assets/js/demo.js"></script>
+        <script src="../assets/js/demo.js"></script>
 
         <!-- Scripts -->
-        <script src="assets/multiverse/js/jquery.min.js"></script>
-        <script src="assets/multiverse/js/jquery.poptrox.min.js"></script>
-        <script src="assets/multiverse/js/browser.min.js"></script>
-        <script src="assets/multiverse/js/breakpoints.min.js"></script>
-        <script src="assets/multiverse/js/util.js"></script>
-        <script src="assets/multiverse/js/main.js"></script>
+        <script src="../assets/multiverse/js/jquery.min.js"></script>
+        <script src="../assets/multiverse/js/jquery.poptrox.min.js"></script>
+        <script src="../assets/multiverse/js/browser.min.js"></script>
+        <script src="../assets/multiverse/js/breakpoints.min.js"></script>
+        <script src="../assets/multiverse/js/util.js"></script>
+        <script src="../assets/multiverse/js/main.js"></script>
 
 
 </body>
