Corrigindo bug das poesias

--- a/pages/poesia.html
+++ b/pages/poesia.html
@@ -51,7 +51,7 @@
 <section class="wrapper style1 align-center">
     <div class="gallery style1 medium lightbox onload-fade-in" id="main">
         <article class="thumb">
-            <a href="images/poesias/_poeira estelar.png" class="image">
+            <a href="../images/poesias/_poeira estelar.png" class="image">
                 <img src="images/poesias/_poeira estelar.png" alt="" />
             </a>
             <div class="caption">
@@ -63,7 +63,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_incrível.png" class="image">
+            <a href="../images/poesias/_incrível.png" class="image">
                 <img src="images/poesias/_incrível.png" alt="" />
             </a>
             <div class="caption">
@@ -75,7 +75,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_a vida.png" class="image">
+            <a href="../images/poesias/_a vida.png" class="image">
                 <img src="images/poesias/_a vida.png" alt="" />
             </a>
             <div class="caption">
@@ -87,7 +87,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_nada-tudo.png" class="image">
+            <a href="../images/poesias/_nada-tudo.png" class="image">
                 <img src="images/poesias/_nada-tudo.png" alt="" />
             </a>
             <div class="caption">
@@ -99,7 +99,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_love.png" class="image">
+            <a href="../images/poesias/_love.png" class="image">
                 <img src="images/poesias/_love.png" alt="" />
             </a>
             <div class="caption">
@@ -112,7 +112,7 @@
 
 
         <article class="thumb">
-            <a href="images/poesias/_4212.png" class="image">
+            <a href="../images/poesias/_4212.png" class="image">
                 <img src="images/poesias/_4212.png" alt="" />
             </a>
             <div class="caption">
@@ -125,7 +125,7 @@
 
 
         <article class="thumb">
-            <a href="images/poesias/_afinando.png" class="image">
+            <a href="../images/poesias/_afinando.png" class="image">
                 <img src="images/poesias/_afinando.png" alt="" />
             </a>
             <div class="caption">
@@ -137,7 +137,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_apaz2.png" class="image">
+            <a href="../images/poesias/_apaz2.png" class="image">
                 <img src="images/poesias/_apaz2.png" alt="" />
             </a>
             <div class="caption">
@@ -149,7 +149,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_árvores.jpg" class="image">
+            <a href="../images/poesias/_árvores.jpg" class="image">
                 <img src="images/poesias/_árvores.jpg" alt="" />
             </a>
             <div class="caption">
@@ -161,7 +161,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_gif.gif" class="image">
+            <a href="../images/poesias/_gif.gif" class="image">
                 <img src="images/poesias/_gif.gif" alt="" />
             </a>
             <div class="caption">
@@ -173,7 +173,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_droga.png" class="image">
+            <a href="../images/poesias/_droga.png" class="image">
                 <img src="images/poesias/_droga.png" alt="" />
             </a>
             <div class="caption">
@@ -185,7 +185,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_estranho.png" class="image">
+            <a href="../images/poesias/_estranho.png" class="image">
                 <img src="images/poesias/_estranho.png" alt="" />
             </a>
             <div class="caption">
@@ -197,7 +197,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_eu.png" class="image">
+            <a href="../images/poesias/_eu.png" class="image">
                 <img src="images/poesias/_eu.png" alt="" />
             </a>
             <div class="caption">
@@ -209,7 +209,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_mundo.png" class="image">
+            <a href="../images/poesias/_mundo.png" class="image">
                 <img src="images/poesias/_mundo.png" alt="" />
             </a>
             <div class="caption">
@@ -221,7 +221,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_poesiabraço.png" class="image">
+            <a href="../images/poesias/_poesiabraço.png" class="image">
                 <img src="images/poesias/_poesiabraço.png" alt="" />
             </a>
             <div class="caption">
@@ -233,7 +233,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_pôr-que2.png" class="image">
+            <a href="../images/poesias/_pôr-que2.png" class="image">
                 <img src="images/poesias/_pôr-que2.png" alt="" />
             </a>
             <div class="caption">
@@ -245,7 +245,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_pressa.png" class="image">
+            <a href="/images/poesias/_pressa.png" class="image">
                 <img src="images/poesias/_pressa.png" alt="" />
             </a>
             <div class="caption">
@@ -257,7 +257,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_riso.jpg" class="image">
+            <a href="../images/poesias/_riso.jpg" class="image">
                 <img src="images/poesias/_riso.jpg" alt="" />
             </a>
             <div class="caption">
@@ -269,7 +269,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_comoloca.png" class="image">
+            <a href="../images/poesias/_comoloca.png" class="image">
                 <img src="images/poesias/_comoloca.png" alt="" />
             </a>
             <div class="caption">
@@ -281,7 +281,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_letras.png" class="image">
+            <a href="../images/poesias/_letras.png" class="image">
                 <img src="images/poesias/_letras.png" alt="" />
             </a>
             <div class="caption">
@@ -293,7 +293,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_et.png" class="image">
+            <a href="../images/poesias/_et.png" class="image">
                 <img src="images/poesias/_et.png" alt="" />
             </a>
             <div class="caption">
@@ -305,7 +305,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_jerusalem.png" class="image">
+            <a href="../images/poesias/_jerusalem.png" class="image">
                 <img src="images/poesias/_jerusalem.png" alt="" />
             </a>
             <div class="caption">
@@ -317,7 +317,7 @@
         </article>
 
         <article class="thumb">
-            <a href="images/poesias/_amor_outro.png" class="image">
+            <a href="../images/poesias/_amor_outro.png" class="image">
                 <img src="images/poesias/_amor_outro.png" alt="" />
             </a>
             <div class="caption">
