--- a/pages/poesia.html
+++ b/pages/poesia.html
@@ -52,7 +52,7 @@
     <div class="gallery style1 medium lightbox onload-fade-in" id="main">
         <article class="thumb">
             <a href="../images/poesias/_poeira estelar.png" class="image">
-                <img src="images/poesias/_poeira estelar.png" alt="" />
+                <img src="../images/poesias/_poeira estelar.png" alt="" />
             </a>
             <div class="caption">
                 <h3>poeira estelar</h3>
@@ -64,7 +64,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_incrível.png" class="image">
-                <img src="images/poesias/_incrível.png" alt="" />
+                <img src="../images/poesias/_incrível.png" alt="" />
             </a>
             <div class="caption">
                 <h3>isso quer dizer que eu sou incrível?</h3>
@@ -76,7 +76,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_a vida.png" class="image">
-                <img src="images/poesias/_a vida.png" alt="" />
+                <img src="../images/poesias/_a vida.png" alt="" />
             </a>
             <div class="caption">
                 <h3>a vida convida</h3>
@@ -88,7 +88,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_nada-tudo.png" class="image">
-                <img src="images/poesias/_nada-tudo.png" alt="" />
+                <img src="../images/poesias/_nada-tudo.png" alt="" />
             </a>
             <div class="caption">
                 <h3>nada/tudo</h3>
@@ -100,7 +100,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_love.png" class="image">
-                <img src="images/poesias/_love.png" alt="" />
+                <img src="../images/poesias/_love.png" alt="" />
             </a>
             <div class="caption">
                 <h3>"#Love"</h3>
@@ -113,7 +113,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_4212.png" class="image">
-                <img src="images/poesias/_4212.png" alt="" />
+                <img src="../images/poesias/_4212.png" alt="" />
             </a>
             <div class="caption">
                 <h3>2²</h3>
@@ -126,7 +126,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_afinando.png" class="image">
-                <img src="images/poesias/_afinando.png" alt="" />
+                <img src="../images/poesias/_afinando.png" alt="" />
             </a>
             <div class="caption">
                 <h3>afinando</h3>
@@ -138,7 +138,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_apaz2.png" class="image">
-                <img src="images/poesias/_apaz2.png" alt="" />
+                <img src="../images/poesias/_apaz2.png" alt="" />
             </a>
             <div class="caption">
                 <h3>a paz</h3>
@@ -150,7 +150,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_árvores.jpg" class="image">
-                <img src="images/poesias/_árvores.jpg" alt="" />
+                <img src="../images/poesias/_árvores.jpg" alt="" />
             </a>
             <div class="caption">
                 <h3>árvores são fábricas</h3>
@@ -162,7 +162,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_gif.gif" class="image">
-                <img src="images/poesias/_gif.gif" alt="" />
+                <img src="../images/poesias/_gif.gif" alt="" />
             </a>
             <div class="caption">
                 <h3>chuva</h3>
@@ -174,7 +174,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_droga.png" class="image">
-                <img src="images/poesias/_droga.png" alt="" />
+                <img src="../images/poesias/_droga.png" alt="" />
             </a>
             <div class="caption">
                 <h3>droga</h3>
@@ -186,7 +186,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_estranho.png" class="image">
-                <img src="images/poesias/_estranho.png" alt="" />
+                <img src="../images/poesias/_estranho.png" alt="" />
             </a>
             <div class="caption">
                 <h3>estranho</h3>
@@ -198,7 +198,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_eu.png" class="image">
-                <img src="images/poesias/_eu.png" alt="" />
+                <img src="../images/poesias/_eu.png" alt="" />
             </a>
             <div class="caption">
                 <h3>eu?</h3>
@@ -210,7 +210,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_mundo.png" class="image">
-                <img src="images/poesias/_mundo.png" alt="" />
+                <img src="../images/poesias/_mundo.png" alt="" />
             </a>
             <div class="caption">
                 <h3>dominar o mundo</h3>
@@ -222,7 +222,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_poesiabraço.png" class="image">
-                <img src="images/poesias/_poesiabraço.png" alt="" />
+                <img src="../images/poesias/_poesiabraço.png" alt="" />
             </a>
             <div class="caption">
                 <h3>abraçopoesia</h3>
@@ -234,7 +234,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_pôr-que2.png" class="image">
-                <img src="images/poesias/_pôr-que2.png" alt="" />
+                <img src="../images/poesias/_pôr-que2.png" alt="" />
             </a>
             <div class="caption">
                 <h3>pôr-que</h3>
@@ -246,7 +246,7 @@
 
         <article class="thumb">
             <a href="/images/poesias/_pressa.png" class="image">
-                <img src="images/poesias/_pressa.png" alt="" />
+                <img src="../images/poesias/_pressa.png" alt="" />
             </a>
             <div class="caption">
                 <h3>tenho pressa</h3>
@@ -258,7 +258,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_riso.jpg" class="image">
-                <img src="images/poesias/_riso.jpg" alt="" />
+                <img src="../images/poesias/_riso.jpg" alt="" />
             </a>
             <div class="caption">
                 <h3>riso</h3>
@@ -270,7 +270,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_comoloca.png" class="image">
-                <img src="images/poesias/_comoloca.png" alt="" />
+                <img src="../images/poesias/_comoloca.png" alt="" />
             </a>
             <div class="caption">
                 <h3>como lôca</h3>
@@ -282,7 +282,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_letras.png" class="image">
-                <img src="images/poesias/_letras.png" alt="" />
+                <img src="../images/poesias/_letras.png" alt="" />
             </a>
             <div class="caption">
                 <h3>letras</h3>
@@ -294,7 +294,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_et.png" class="image">
-                <img src="images/poesias/_et.png" alt="" />
+                <img src="../images/poesias/_et.png" alt="" />
             </a>
             <div class="caption">
                 <h3>ET</h3>
@@ -306,7 +306,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_jerusalem.png" class="image">
-                <img src="images/poesias/_jerusalem.png" alt="" />
+                <img src="../images/poesias/_jerusalem.png" alt="" />
             </a>
             <div class="caption">
                 <h3>yeroushalaim</h3>
@@ -318,7 +318,7 @@
 
         <article class="thumb">
             <a href="../images/poesias/_amor_outro.png" class="image">
-                <img src="images/poesias/_amor_outro.png" alt="" />
+                <img src="../images/poesias/_amor_outro.png" alt="" />
             </a>
             <div class="caption">
                 <h3>amor no outro</h3>
