Corrigindo bug das poesias

--- a/pages/poesia.html
+++ b/pages/poesia.html
@@ -57,14 +57,14 @@
             <div class="caption">
                 <h3>poeira estelar</h3>
                 <ul class="actions fixed">
-                    <li><span class="button small">Expandir</span></li>
+                    <li><span class="button small">Expandir</span></li>         
                 </ul>
             </div>
         </article>
 
         <article class="thumb">
-            <a href="../images/poesias/_incrível.png" class="image">
-                <img src="../images/poesias/_incrível.png" alt="" />
+            <a href="../images/poesias/_incrivel.png" class="image">
+                <img src="../images/poesias/_incrivel.png" alt="" />
             </a>
             <div class="caption">
                 <h3>isso quer dizer que eu sou incrível?</h3>
@@ -149,8 +149,8 @@
         </article>
 
         <article class="thumb">
-            <a href="../images/poesias/_árvores.jpg" class="image">
-                <img src="../images/poesias/_árvores.jpg" alt="" />
+            <a href="../images/poesias/_arvores.jpg" class="image">
+                <img src="../images/poesias/_arvores.jpg" alt="" />
             </a>
             <div class="caption">
                 <h3>árvores são fábricas</h3>
@@ -221,8 +221,8 @@
         </article>
 
         <article class="thumb">
-            <a href="../images/poesias/_poesiabraço.png" class="image">
-                <img src="../images/poesias/_poesiabraço.png" alt="" />
+            <a href="../images/poesias/_poesiabraco.png" class="image">
+                <img src="../images/poesias/_poesiabraco.png" alt="" />
             </a>
             <div class="caption">
                 <h3>abraçopoesia</h3>
@@ -233,8 +233,8 @@
         </article>
 
         <article class="thumb">
-            <a href="../images/poesias/_pôr-que2.png" class="image">
-                <img src="../images/poesias/_pôr-que2.png" alt="" />
+            <a href="../images/poesias/_por-que2.png" class="image">
+                <img src="../images/poesias/_por-que2.png" alt="" />
             </a>
             <div class="caption">
                 <h3>pôr-que</h3>
