Corrigindo bug das poesias

--- a/pages/poesia.html
+++ b/pages/poesia.html
@@ -51,13 +51,279 @@
 <section class="wrapper style1 align-center">
     <div class="gallery style1 medium lightbox onload-fade-in" id="main">
         <article class="thumb">
-            <a href="../images/poesias/_poeira estelar.png" class="image">
-                <img src="../images/poesias/_poeira estelar.png" alt="" />
+            <a href="images/poesias/_poeira estelar.png" class="image">
+                <img src="images/poesias/_poeira estelar.png" alt="" />
             </a>
             <div class="caption">
                 <h3>poeira estelar</h3>
                 <ul class="actions fixed">
                     <li><span class="button small">Expandir</span></li>         
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_incrivel.png" class="image">
+                <img src="images/poesias/_incrivel.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>isso quer dizer que eu sou incrível?</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_a vida.png" class="image">
+                <img src="images/poesias/_a vida.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>a vida convida</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_nada-tudo.png" class="image">
+                <img src="images/poesias/_nada-tudo.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>nada/tudo</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_love.png" class="image">
+                <img src="images/poesias/_love.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>"#Love"</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+
+        <article class="thumb">
+            <a href="images/poesias/_4212.png" class="image">
+                <img src="images/poesias/_4212.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>2²</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+
+        <article class="thumb">
+            <a href="images/poesias/_afinando.png" class="image">
+                <img src="images/poesias/_afinando.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>afinando</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_apaz2.png" class="image">
+                <img src="images/poesias/_apaz2.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>a paz</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_arvores.jpg" class="image">
+                <img src="images/poesias/_arvores.jpg" alt="" />
+            </a>
+            <div class="caption">
+                <h3>árvores são fábricas</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_gif.gif" class="image">
+                <img src="images/poesias/_gif.gif" alt="" />
+            </a>
+            <div class="caption">
+                <h3>chuva</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_droga.png" class="image">
+                <img src="images/poesias/_droga.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>droga</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_estranho.png" class="image">
+                <img src="images/poesias/_estranho.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>estranho</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_eu.png" class="image">
+                <img src="images/poesias/_eu.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>eu?</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_mundo.png" class="image">
+                <img src="images/poesias/_mundo.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>dominar o mundo</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_poesiabraco.png" class="image">
+                <img src="images/poesias/_poesiabraco.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>abraçopoesia</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_por-que2.png" class="image">
+                <img src="images/poesias/_por-que2.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>pôr-que</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="/images/poesias/_pressa.png" class="image">
+                <img src="images/poesias/_pressa.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>tenho pressa</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_riso.jpg" class="image">
+                <img src="images/poesias/_riso.jpg" alt="" />
+            </a>
+            <div class="caption">
+                <h3>riso</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_comoloca.png" class="image">
+                <img src="images/poesias/_comoloca.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>como lôca</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_letras.png" class="image">
+                <img src="images/poesias/_letras.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>letras</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_et.png" class="image">
+                <img src="images/poesias/_et.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>ET</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_jerusalem.png" class="image">
+                <img src="images/poesias/_jerusalem.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>yeroushalaim</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
+                </ul>
+            </div>
+        </article>
+
+        <article class="thumb">
+            <a href="images/poesias/_amor_outro.png" class="image">
+                <img src="images/poesias/_amor_outro.png" alt="" />
+            </a>
+            <div class="caption">
+                <h3>amor no outro</h3>
+                <ul class="actions fixed">
+                    <li><span class="button small">Expandir</span></li>
                 </ul>
             </div>
         </article>
