--- a/pages/poesia.html
+++ b/pages/poesia.html
@@ -332,25 +332,25 @@
 </section>
 </div>
 <!-- Scripts -->
-        <script src="../assets/js/jquery.min.js"></script>
-        <script src="../assets/js/jquery.scrollex.min.js"></script>
-        <script src="../assets/js/jquery.scrolly.min.js"></script>
-        <script src="../assets/js/browser.min.js"></script>
-        <script src="../assets/js/breakpoints.min.js"></script>
-        <script src="../assets/js/util.js"></script>
-        <script src="../assets/js/main.js"></script>
-        <script src="../assets/js/navbar.js"></script>
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.scrollex.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
+        <script src="assets/js/navbar.js"></script>
 
         <!-- Note: Only needed for demo purposes. Delete for production sites. -->
-        <script src="../assets/js/demo.js"></script>
+        <script src="assets/js/demo.js"></script>
 
         <!-- Scripts -->
-        <script src="../assets/multiverse/js/jquery.min.js"></script>
-        <script src="../assets/multiverse/js/jquery.poptrox.min.js"></script>
-        <script src="../assets/multiverse/js/browser.min.js"></script>
-        <script src="../assets/multiverse/js/breakpoints.min.js"></script>
-        <script src="../assets/multiverse/js/util.js"></script>
-        <script src="../assets/multiverse/js/main.js"></script>
+        <script src="assets/multiverse/js/jquery.min.js"></script>
+        <script src="assets/multiverse/js/jquery.poptrox.min.js"></script>
+        <script src="assets/multiverse/js/browser.min.js"></script>
+        <script src="assets/multiverse/js/breakpoints.min.js"></script>
+        <script src="assets/multiverse/js/util.js"></script>
+        <script src="assets/multiverse/js/main.js"></script>
 
 
 </body>
