Fuçando pra tentar resolver bug no github pages

--- a/pages/videoclipes.html
+++ b/pages/videoclipes.html
@@ -5,18 +5,18 @@
     <title>videoclipes</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="shortcut icon" href="../assets/favicons/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../assets/css/main.css" />
-    <link rel="stylesheet" href="../assets/css/navbar.css" />
+	<link rel="shortcut icon" href="/assets/favicons/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/navbar.css" />
     <noscript>
-        <link rel="stylesheet" href="../assets/css/noscript.css" />
+        <link rel="stylesheet" href="/assets/css/noscript.css" />
     </noscript>
 </head>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="topnav" id="myTopnav">
-    <a href="../index.html" class="logo"><img src="../assets/favicons/favicon.ico" class="logo_img" style="width:20px;float:center;"
+    <a href="../index.html" class="logo"><img src="/assets/favicons/favicon.ico" class="logo_img" style="width:20px;float:center;"
             alt="" /></a>
     <div class="dropdown">
         <div class="dropbtn">arte
