Corrigindo bug nas poesias

--- a/pages/videoclipes.html
+++ b/pages/videoclipes.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="topnav" id="myTopnav">
-    <a href="../index.html" class="logo"><img src="../assets/favicons/favicon.ico" class="logo_img" style="width:20px;float:center;"
+    <a href="../inicial.html" class="logo"><img src="../assets/favicons/favicon.ico" class="logo_img" style="width:20px;float:center;"
             alt="" /></a>
     <div class="dropdown">
         <div class="dropbtn">arte
@@ -151,17 +151,17 @@
 <section>
     </div>
     <!-- Scripts -->
-    <script src="../assets/js/jquery.min.js"></script>
-    <script src="../assets/js/jquery.scrollex.min.js"></script>
-    <script src="../assets/js/jquery.scrolly.min.js"></script>
-    <script src="../assets/js/browser.min.js"></script>
-    <script src="../assets/js/breakpoints.min.js"></script>
-    <script src="../assets/js/util.js"></script>
-    <script src="../assets/js/main.js"></script>
-    <script src="../assets/js/navbar.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/navbar.js"></script>
 
     <!-- Note: Only needed for demo purposes. Delete for production sites. -->
-    <script src="../assets/js/demo.js"></script>
+    <script src="assets/js/demo.js"></script>
     </body>
 
 </html>
