--- a/pages/videoclipes.html
+++ b/pages/videoclipes.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="topnav" id="myTopnav">
-    <a href="../inicial.html" class="logo"><img src="../assets/favicons/favicon.ico" class="logo_img" style="width:20px;float:center;"
+    <a href="../index.html" class="logo"><img src="../assets/favicons/favicon.ico" class="logo_img" style="width:20px;float:center;"
             alt="" /></a>
     <div class="dropdown">
         <div class="dropbtn">arte
@@ -51,7 +51,7 @@
     <div class="gallery style2 big onload-fade-in">
         <article>
             <a href="https://www.youtube.com/watch?v=aAVAkcR-cR0/" target="_blank" class="image">
-                <img src="images/videothumbs/sonho lúcido.jpg" alt="" />
+                <img src="../images/videothumbs/sonho lúcido.jpg" alt="" />
             </a>
             <div class="caption">
                 <h3>Sonho lúcido</h3>
@@ -63,7 +63,7 @@
 
         <article>
             <a href="https://www.youtube.com/watch?v=rYWLafROaSc" target="_blank" class="image">
-                <img src="images/videothumbs/ghosting.jpg" alt="" />
+                <img src="../images/videothumbs/ghosting.jpg" alt="" />
             </a>
             <div class="caption">
                 <h3>Ghosting com o mundo</h3>
@@ -75,7 +75,7 @@
 
         <article>
             <a href="https://www.youtube.com/watch?v=SJr_elK3h88" target="_blank" class="image">
-                <img src="images/videothumbs/teoria da relatividade.jpg" alt="" />
+                <img src="../images/videothumbs/teoria da relatividade.jpg" alt="" />
             </a>
             <div class="caption">
                 <h3>teoria da relatividade</h3>
@@ -87,7 +87,7 @@
 
         <article>
             <a href="https://www.youtube.com/watch?v=31O2xUpBgo0" target="_blank" class="image">
-                <img src="images/videothumbs/nos querem infelizes.jpg" alt="" />
+                <img src="../images/videothumbs/nos querem infelizes.jpg" alt="" />
             </a>
             <div class="caption">
                 <h3>nos querem infelizes. :(</h3>
@@ -99,7 +99,7 @@
 
         <article>
             <a href="https://www.youtube.com/watch?v=EhJ9prXb0N8" target="_blank" class="image">
-                <img src="images/videothumbs/$entid0.jpg" alt="" />
+                <img src="../images/videothumbs/$entid0.jpg" alt="" />
             </a>
             <div class="caption">
                 <h3>$entid0</h3>
@@ -111,7 +111,7 @@
         
         <article>
             <a href="https://www.youtube.com/watch?v=B6mL1C84B4U" target="_blank" class="image">
-                <img src="images/videothumbs/meio black mirror.jpg" alt="" />
+                <img src="../images/videothumbs/meio black mirror.jpg" alt="" />
             </a>
             <div class="caption">
                 <h3>meio black mirror</h3>
@@ -123,7 +123,7 @@
 
         <article>
             <a href="https://www.youtube.com/watch?v=QTpMTBv3cj4&t=1s" target="_blank" class="image">
-                <img src="images/videothumbs/macacos urbanos.jpg" alt="" />
+                <img src="../images/videothumbs/macacos urbanos.jpg" alt="" />
             </a>
             <div class="caption">
                 <h3>macacos urbanos</h3>
@@ -134,7 +134,7 @@
         </article>
         <article>
             <a href="https://www.youtube.com/watch?v=FeE7907bBHA" target="_blank" class="image">
-                <img src="images/videothumbs/eu acho.jpg" alt="" />
+                <img src="../images/videothumbs/eu acho.jpg" alt="" />
             </a>
             <div class="caption">
                 <h3>eu acho</h3>
@@ -151,17 +151,17 @@
 <section>
     </div>
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/navbar.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/js/jquery.scrollex.min.js"></script>
+    <script src="../assets/js/jquery.scrolly.min.js"></script>
+    <script src="../assets/js/browser.min.js"></script>
+    <script src="../assets/js/breakpoints.min.js"></script>
+    <script src="../assets/js/util.js"></script>
+    <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/navbar.js"></script>
 
     <!-- Note: Only needed for demo purposes. Delete for production sites. -->
-    <script src="assets/js/demo.js"></script>
+    <script src="../assets/js/demo.js"></script>
     </body>
 
 </html>
