--- a/pages/musica.html
+++ b/pages/musica.html
@@ -66,7 +66,7 @@
 	</div>
 	<div class="image">
 		<a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e" target="_blank">
-		<img src="../images/músicas/sonho lúcido.png" alt="" />
+		<img src="../images/músicas/sonho lúcido.jpg" alt="" />
 		</a>
 	</div>
 </section>
