Ajustando caminho botões spotify e youtube

--- a/pages/musica.html
+++ b/pages/musica.html
@@ -45,10 +45,10 @@
 	<h2>Músicas</h2>
 	<p>Clica nos links das plataformas pra escutar as músicas! 🌷</p>	
 		<a href="https://open.spotify.com/artist/2rj8ccj3Z0rfVh18nxzZUQ" target="_blank" >
-			<img src="images/spotify.png" width=110px alt="" />
+			<img src="../images/spotify.png" width=110px alt="" />
 		</a>
 		<a href="https://www.youtube.com/@pedroluzer" target="_blank">
-			<img src="images/youtube.jpg" width=110px alt="" /></a>
+			<img src="../images/youtube.jpg" width=110px alt="" /></a>
 		</a>
 		</div>
 <!-- Sonho lúcido -->
@@ -58,10 +58,10 @@
 		<h3>Sonho lúcido</h3><sup>2023</sup>
 		<p></p>
 		<a href="https://open.spotify.com/track/2O8lNoPJK2OTDwY85pPG9I?si=80d72d0ac42b4c9e" target="_blank">
-			<img src="images/spotify.png" width=70px alt="" />
+			<img src="../images/spotify.png" width=70px alt="" />
 		</a>
 		<a href="https://www.youtube.com/watch?v=aAVAkcR-cR0" target="_blank">
-			<img src="images/youtube.jpg" width=70px alt="" /></a>
+			<img src="../images/youtube.jpg" width=70px alt="" /></a>
 		</a>
 	</div>
 	<div class="image">
@@ -78,9 +78,9 @@
 		<h3>1000 Caminhos</h3><sup>2023</sup>
 		<p></p>
 		<a href="https://open.spotify.com/track/6qj9Q3dQmrwGR8tTPFJKuH" target="_blank">
-			<img src="images/spotify.png" width=70px alt="" /></a>
+			<img src="../images/spotify.png" width=70px alt="" /></a>
 		<a href="https://www.youtube.com/watch?v=NRdQ2uLZBuo" target="_blank">
-			<img src="images/youtube.jpg" width=70px alt="" /></a>
+			<img src="../images/youtube.jpg" width=70px alt="" /></a>
 	</div>
 	<div class="image">
 		<a href="https://open.spotify.com/track/6qj9Q3dQmrwGR8tTPFJKuH" target="_blank">
@@ -95,10 +95,10 @@
 		<h3>Ghosting com o mundo</h3><sup>2021</sup>
 		<p></p>
 		<a href="https://open.spotify.com/track/6t8wNssH4bNZVcw5HlyVo6?si=42c60cacd2464db7" target="_blank">
-			<img src="images/spotify.png" width=70px alt="" />
+			<img src="../images/spotify.png" width=70px alt="" />
 		</a>
 		<a href="https://www.youtube.com/watch?v=rYWLafROaSc&pp=ygUIcGVkcm9sdXo" target="_blank">
-			<img src="images/youtube.jpg" width=70px alt="" /></a>
+			<img src="../images/youtube.jpg" width=70px alt="" /></a>
 		</a>
 	</div>
 	<div class="image">
@@ -114,10 +114,10 @@
 		<h3>nos querem infelizes :(</h3><sup>2020</sup>
 		<p></p>
 		<a href="https://open.spotify.com/track/3z6ucuggkQxdffEZPRMiID?si=57514d682119453a" target="_blank">
-			<img src="images/spotify.png" width=70px alt="" />
+			<img src="../images/spotify.png" width=70px alt="" />
 		</a>
 		<a href="https://www.youtube.com/watch?v=31O2xUpBgo0" target="_blank">
-			<img src="images/youtube.jpg" width=70px alt="" /></a>
+			<img src="../images/youtube.jpg" width=70px alt="" /></a>
 		</a>
 	</div>
 	<div class="image">
@@ -132,10 +132,10 @@
 		<h3>Millennial (ou só mais um disco de rap feito por um menino branco)</h3><sup>2019</sup>
 		<p></p>
 		<a href="https://open.spotify.com/album/3nMD0enYUV1bDuKgj4HLVl" target="_blank">
-			<img src="images/spotify.png" width=70px alt="" />
+			<img src="../images/spotify.png" width=70px alt="" />
 		</a>
 		<a href="https://www.youtube.com/watch?v=rGuLEts10KI" target="_blank">
-			<img src="images/youtube.jpg" width=70px alt="" /></a>
+			<img src="../images/youtube.jpg" width=70px alt="" /></a>
 		</a>
 	</div>
 	<div class="image">
