Ajustei caminhos assets em pages

--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -52,15 +52,15 @@
   <iframe class="mapa" src="https://www.google.com/maps/d/u/0/embed?mid=1hwgIgDHqUs8oOdlKRu08w9-xWRK9gqQ&ehbc=2E312F" width="640" height="480"></iframe>
 <!-- Scripts -->
 </section>
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.scrollex.min.js"></script>
-<script src="assets/js/jquery.scrolly.min.js"></script>
-<script src="assets/js/browser.min.js"></script>
-<script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
-<script src="assets/js/main.js"></script>
-<script src="assets/js/navbar.js"></script>
-<script src="assets/js/navbar.js"></script>
+<script src="../assets/js/jquery.min.js"></script>
+<script src="../assets/js/jquery.scrollex.min.js"></script>
+<script src="../assets/js/jquery.scrolly.min.js"></script>
+<script src="../assets/js/browser.min.js"></script>
+<script src="../assets/js/breakpoints.min.js"></script>
+<script src="../assets/js/util.js"></script>
+<script src="../assets/js/main.js"></script>
+<script src="../assets/js/navbar.js"></script>
+<script src="../assets/js/navbar.js"></script>
 
 </body>
 
