instruções na página de videoclipes

--- a/pages/videoclipes.html
+++ b/pages/videoclipes.html
@@ -143,8 +143,8 @@
                 </ul>
             </div>
         </article>
-
     </div>
+    <br>Passa pro lado para ver mais →
 </section>
 
 
