--- a/pages/videoclipes.html
+++ b/pages/videoclipes.html
@@ -2,6 +2,24 @@
 <html>
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YGNLG9HTHM"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-YGNLG9HTHM');
+    </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YGNLG9HTHM"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-YGNLG9HTHM');
+    </script>
     <title>videoclipes</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -36,7 +54,8 @@
         </div>
     </div>
     <a href="acompanhe.html">me acompanhe</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()" style="text-align:center;">
+        menu
         <i class="fa fa-bars" , style="padding: 5px;float: right;"></i>
     </a>
 </div>
