--- a/pages/musica.html
+++ b/pages/musica.html
@@ -12,6 +12,10 @@
     gtag('config', 'G-YGNLG9HTHM');
     </script>
 	<title>música</title>
+	<meta property="og:title" content="músicas" />
+	<meta property="og:site_name" content="músicas" />
+	<meta property="og:url" content="https://pedroluz.com.br/musica.html" />
+	<meta property="og:image" content="https://pedroluz.com.br/images/m%C3%BAsicas/sonho%20l%C3%BAcido.jpg" />
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="shortcut icon" href="../assets/favicons/favicon.ico" type="image/x-icon">
