--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
 		<title>pedroluz</title>
 		<meta property="og:title" content="pedroluz" />
 		<meta property="og:url" content="https://pedroluz.com.br" />
-		<meta property="og:description" content="Mais de 10 anos criticando as redes sociais.
-												Só agora entendi que não quero participar daquilo.
-												Foi pra cá que eu fugi." />
-		<meta property="og:image" content="https://pedroluz.com.br/images/m%C3%BAsicas/sonho%20l%C3%BAcido.jpg" />
+		<meta property="og:description" content="Minha casinha na internet 🧙" />
+		<meta property="og:image" content="images/og.jpg" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
