--- a/pages/musica.html
+++ b/pages/musica.html
@@ -14,7 +14,7 @@
 	<title>música</title>
 	<meta property="og:title" content="pedroluz" />
 	<meta property="og:url" content="https://pedroluz.com.br/musica.html" />
-	<meta property="og:image" content="images/og.jpg" />
+	<meta property="og:image" content="../images/og.jpg" />
 	<meta property="og:description" content="Músicas 🌷" />
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
