--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<title>pedroluz</title>
 		<meta property="og:title" content="pedroluz" />
 		<meta property="og:url" content="https://pedroluz.com.br" />
-		<meta property="og:description" content="Minha casinha na internet 🧙" />
+		<meta property="og:description" content="Minha casinha na internet 🧙💜" />
 		<meta property="og:image" content="images/og.jpg" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
