--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<title>pedroluz</title>
 		<meta property="og:title" content="pedroluz" />
 		<meta property="og:url" content="https://pedroluz.com.br" />
-		<meta property="og:description" content="Minha casinha na internet 🧙💜" />
+		<meta property="og:description" content="Minha casinha na internet 🧙" />
 		<meta property="og:image" content="images/og.jpg" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -39,7 +39,7 @@
 								Só agora entendi que não quero participar daquilo.<br>
 								Foi pra cá que eu fugi.
 							<ul class="actions stacked">
-								<li><a href="pages/musica" class="button big wide smooth-scroll-middle">Entre aqui</a></li>
+								<li><a href="pages/musica.html" class="button big wide smooth-scroll-middle">Entre aqui</a></li>
 							</ul>
 						</div>
 						<div class="image">
