--- a/pages/blog.html
+++ b/pages/blog.html
@@ -11,17 +11,17 @@
 
     gtag('config', 'G-YGNLG9HTHM');
     </script>
-    <title>acompanhe</title>
+    <title>blog</title>
 	<meta property="og:title" content="pedroluz" />
-	<meta property="og:url" content="https://pedroluz.com.br/pages/acompanhe" />
+	<meta property="og:url" content="https://pedroluz.com.br/pages/musica" />
 	<meta property="og:image" content="../images/og.jpg" />
-	<meta property="og:description" content="Acompanhe 📧" />
+	<meta property="og:description" content="Blog 📓" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="shortcut icon" href="../assets/favicons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/main.css" />
     <link rel="stylesheet" href="../assets/css/navbar.css"/>
-    <link rel="stylesheet" href="../assets/css/mapa.css"/>
+    <link rel="stylesheet" href="../assets/css/blog.css"/>
     <noscript>
         <link rel="stylesheet" href="../assets/css/noscript.css" />
     </noscript>
@@ -36,33 +36,37 @@
         <div class="dropbtn">arte
         </div>
         <div class="dropdown-content">
-            <a href="musica">música</a>
-            <a href="poesia">poesia</a>
-            <a href="videoclipes">videoclipes</a>
+            <a href="musica.html">música</a>
+            <a href="poesia.html">poesia</a>
+            <a href="videoclipes.html">videoclipes</a>
         </div>
     </div>
     <div class="dropdown">
         <div class="dropbtn">estrada
         </div>
         <div class="dropdown-content">
-            <a href="blog">blog</a>
-            <a href="mapa">mapa</a>
+            <a href="blog.html">blog</a>
+            <a href="mapa.html">mapa</a>
         </div>
     </div>
-    <a href="acompanhe">me acompanhe</a>
+    <a href="acompanhe.html">me acompanhe</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()" style="text-align:center;">
         menu
         <i class="fa fa-bars" , style="padding: 5px;float: right;"></i>
     </a>
 </div>
-<!-- Gallery -->
-<div class="acompanhe">
-	<h2>Me acompanhe</h2>
-	<p>Deixa teu telefone aí embaixo pra receber atualizações por Whatsapp 💜
-    <iframe data-tally-src="https://tally.so/embed/3lyrgW?transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="157" frameborder="0" marginheight="0" marginwidth="0" title="Telefone"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
-</p>
-</div>
-<script src="//embed.typeform.com/next/embed.js"></script>
+
+<div class="items style3 medium onscroll-fade-in">
+    
+<a href="blog/sta_marta.html" style="text-decoration: none">
+  <section class="cardblog">
+        <img src="../images/blog/sta_marta/thumb.jpeg" width=100% height= 100% alt="" />
+        <h2>Farol de Santa Marta</h2>
+        <i>a Kombi e a decisão de pegar a estrada</i><br>
+      <sub>01 abr, 2024</sub>
+  </section>
+</a>
+<!-- Scripts -->
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/jquery.scrollex.min.js"></script>
 <script src="../assets/js/jquery.scrolly.min.js"></script>
