--- a/pages/poesia.html
+++ b/pages/poesia.html
@@ -15,7 +15,7 @@
 	<meta property="og:title" content="pedroluz" />
 	<meta property="og:url" content="https://pedroluz.com.br/pages/poesia" />
 	<meta property="og:image" content="../images/og.jpg" />
-	<meta property="og:description" content="Poesias 🍃" />
+	<meta property="og:description" content="Poesia 🍃" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="shortcut icon" href="../assets/favicons/favicon.ico" type="image/x-icon">
@@ -37,20 +37,20 @@
         <div class="dropbtn">arte
         </div>
         <div class="dropdown-content">
-            <a href="musica">música</a>
-            <a href="poesia">poesia</a>
-            <a href="videoclipes">videoclipes</a>
+            <a href="musica.html">música</a>
+            <a href="poesia.html">poesia</a>
+            <a href="videoclipes.html">videoclipes</a>
         </div>
     </div>
     <div class="dropdown">
         <div class="dropbtn">estrada
         </div>
         <div class="dropdown-content">
-            <a href="blog">blog</a>
-            <a href="mapa">mapa</a>
+            <a href="blog.html">blog</a>
+            <a href="mapa.html">mapa</a>
         </div>
     </div>
-    <a href="acompanhe">me acompanhe</a>
+    <a href="acompanhe.html">me acompanhe</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()" style="text-align:center;">
         menu
         <i class="fa fa-bars" , style="padding: 5px;float: right;"></i>
