.http removido nos links

--- a/pages/poesia.html
+++ b/pages/poesia.html
@@ -31,26 +31,26 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div id="wrapper">
 <div class="topnav" id="myTopnav">
-    <a href="../index.html" class="logo"><img src="../assets/favicons/favicon.ico" class="logo_img" style="width:20px;float:center;"
+    <a href="../index" class="logo"><img src="../assets/favicons/favicon.ico" class="logo_img" style="width:20px;float:center;"
             alt="" /></a>
     <div class="dropdown">
         <div class="dropbtn">arte
         </div>
         <div class="dropdown-content">
-            <a href="musica.html">música</a>
-            <a href="poesia.html">poesia</a>
-            <a href="videoclipes.html">videoclipes</a>
+            <a href="musica">música</a>
+            <a href="poesia">poesia</a>
+            <a href="videoclipes">videoclipes</a>
         </div>
     </div>
     <div class="dropdown">
         <div class="dropbtn">estrada
         </div>
         <div class="dropdown-content">
-            <a href="blog.html">blog</a>
-            <a href="mapa.html">mapa</a>
+            <a href="blog">blog</a>
+            <a href="mapa">mapa</a>
         </div>
     </div>
-    <a href="acompanhe.html">me acompanhe</a>
+    <a href="acompanhe">me acompanhe</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()" style="text-align:center;">
         menu
         <i class="fa fa-bars" , style="padding: 5px;float: right;"></i>
